[package]
name = "backend_rust_xura"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15"
uuid = { version = "1.2", features = ["v4"] }
bcrypt = "0.11"
rand = "0.8"
env_logger = "0.10"
log = "0.4"